패키지 구조 변경 및 인증글 등록 및 상세보기 구현

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,9 +14,9 @@
     <div class="row">
         <ul class="list-group">
             <!-- TODO: '모임'이 구현되면 수정할 것 -->
-            <li class="list-group-item"><a href="/community/1000/articles">모임 1</a></li>
-            <li class="list-group-item"><a href="/community/2000/articles">모임 2</a></li>
-            <li class="list-group-item"><a href="/community/3000/articles">모임 3</a></li>
+            <li class="list-group-item"><a href="/community/1/articles">모임 1</a></li>
+            <li class="list-group-item"><a href="/community/2/articles">모임 2</a></li>
+            <li class="list-group-item"><a href="/community/3/articles">모임 3</a></li>
         </ul>
     </div><!-- /row -->
 </div>
